crates/bitnet-kernels/tests/snapshots/snapshot_wave25__w25_fusion_config_validate_zero_size.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave25.rs
expression: err.to_string()
---
invalid config: min_fusion_size must be > 0
