crates/bitnet-kernels/tests/snapshots/snapshot_wave25__w25_fusion_error_empty_input_display.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave25.rs
expression: err.to_string()
---
empty input
