crates/bitnet-kernels/tests/snapshots/snapshot_wave25__w25_gating_config_geglu.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave25.rs
expression: cfg
---
GatingConfig {
    n: 2048,
    threads_per_block: 256,
    gating: GeGLU,
}
