crates/bitnet-kernels/tests/snapshots/snapshot_wave25__w25_gating_type_all_variants_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave25.rs
expression: types
---
[
    SwiGLU,
    GeGLU,
    ReGLU,
]
