crates/bitnet-kernels/tests/snapshots/snapshot_wave25__w25_gating_type_kernel_names.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave25.rs
expression: names
---
[
    "swiglu_f32",
    "geglu_f32",
    "reglu_f32",
]
