crates/bitnet-kernels/tests/snapshots/snapshot_wave25__w25_layernorm_config_custom_eps.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave25.rs
expression: cfg
---
LayerNormConfig {
    eps: 1e-6,
    normalized_shape: [],
    elementwise_affine: false,
}
