crates/bitnet-kernels/tests/snapshots/snapshot_wave25__w25_matmul_config_for_shape_small.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave25.rs
expression: cfg
---
MatmulConfig {
    m: 128,
    n: 256,
    k: 64,
    batch_size: 1,
    transpose_a: false,
    transpose_b: false,
    alpha: 1.0,
    beta: 0.0,
    dtype: F32,
    tile_m: 32,
    tile_n: 32,
    tile_k: 32,
    threads_per_block: 256,
    shared_mem_bytes: 8192,
}
